- Bleeding can now be applied to all entities! Still a basic, early implementation; I want to add the ability to blacklist and/or whitelist entities in the config, as well as modify the settings on a per-entity basis.
- Bleed particles now persist for much longer. Follow those blood trails!
- Backend changes to bleed particles to assist with the above. They're now asynchronous, so they should perform better and be less likely to hit the particle limit now, but may not be as responsive or accurate for other entities (local player's particles are unaffected by this change). 
- Changed blood colour; now darker, slightly more brown
- Fix: game would crash if you tried editing the settings of a world saved with this mod enabled